<resources>
    <string name="app_name">Онлайн банк</string>
    <string name="exit_button">Выйти</string>
    <string name="add_loan_button">Новый займ</string>
    <string name="login_button">Войти</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="login_text">Для входа в личный кабинет введите логин и пароль</string>
    <string name="login_name">Логин</string>
    <string name="login_password">Пароль</string>
    <string name="registration_text">Для регистрации пользователя введите логин и пароль</string>
    <string name="registration_name">Логин</string>
    <string name="registration_password">Пароль</string>
    <string name="max_amount_text">Лимит займа:</string>
    <string name="percent_text">Процентная ставка:</string>
    <string name="period_text">Период кредитования:</string>
    <string name="loan_condition">Условие кредита</string>
    <string name="new_loan_condition">Оформить займ</string>
    <string name="new_loan_condition_name">Имя</string>
    <string name="new_loan_condition_lastName">Фамилия</string>
    <string name="new_loan_condition_phone">Телефон</string>
    <string name="new_loan_condition_amount">Сумма займа</string>
    <string name="new_loan_condition_button">Оформить</string>
    <string name="percent_char">%</string>
    <string name="month_text">мес</string>
    <string name="list_header">Список займов</string>
    <string name="rejected_text">Отклоненые</string>
    <string name="registered_text">Регистрируются</string>
    <string name="approved_text">Утвержденные</string>
    <string name="currency_text">руб</string>
    <string name="successful_loan_text">Поздравляем, Ваш запрос на получение займа отправлен на расмотрение, Пожалуйста ожидайте.</string>
    <string name="successful_loan_button">Вернуться к списку займов</string>
    <string name="id_text">id:</string>
    <string name="amount_text">Сумма займа:</string>
    <string name="state_text">Статус:</string>
    <string name="loan_information1">Кратная информация о займе:</string>
    <string name="loan_information2">Подробную информацию о займе можете найти с помощью иденфикационного номера (id) в списке займев в разделе указанов статуке займа</string>
    <string name="loan_information3">Подробная информация о займе</string>
    <string name="customer_data_text">Персоональные данные клиента:</string>
    <string name="name_text">Имя:</string>
    <string name="last_name_text">Фамилия:</string>
    <string name="phone_text">Телефон:</string>
    <string name="date_text">Дата займа:</string>
    <string name="time_text">Время займа:</string>
    <string name="prompt_text">Если вы первый раз то прочтите</string>
    <string name="registration_information">Если у вас нет учетной записа, пройдите процедуру регистрации</string>
    <string name="welcome_text">Добро пожаловать в Онлайн банк</string>
    <string name="welcome_text1">На главном экране личного кабинета вы увидете список займов , выбрать нужный стату займа можно в нижнем части экрана:</string>
    <string name="welcome_text2">Навигация по личному кабинету:</string>
    <string name="welcome_text3">- список утвержденных займов</string>
    <string name="welcome_text4">- список регистриющихся займов</string>
    <string name="welcome_text5">- список отклоненых займов</string>
    <string name="welcome_text6">- оформить новый займ</string>
    <string name="welcome_text7">- выход из личного кабинета</string>
</resources>